--- a/app_mxh_manga/app/src/main/res/layout/item_image_close.xml
+++ b/app_mxh_manga/app/src/main/res/layout/item_image_close.xml
@@ -1,20 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:backgroundTint="@color/light_gray">
     <ImageView
         android:id="@+id/iv_uri"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/img"
+        android:src="@drawable/ic_baseline_restart_alt_40"
         android:adjustViewBounds="true"
         android:scaleType="centerCrop"
+        android:backgroundTint="@android:color/transparent"
         />
     <ImageButton
         android:id="@+id/ib_close"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:src="@drawable/ic_baseline_close_40"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_baseline_cancel_40"
         android:background="@android:color/transparent"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
