--- a/app_mxh_manga/app/src/main/res/layout/fragment_profile.xml
+++ b/app_mxh_manga/app/src/main/res/layout/fragment_profile.xml
@@ -23,20 +23,22 @@
             android:layout_height="70dp"
             app:cardElevation="0dp"
             android:layout_margin="10dp"
+            app:cardBackgroundColor="@color/white_30"
             app:cardCornerRadius="50dp">
             <ImageView
                 android:id="@+id/iv_avt"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:backgroundTint="@android:color/transparent"
-                android:src="@drawable/ic_launcher_background"
+                android:src="@drawable/ic_baseline_person_40"
+                android:scaleType="centerCrop"
                 />
         </androidx.cardview.widget.CardView>
         <TextView
             android:id="@+id/tv_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Nguyễn minh quán"
+            android:text="User name"
             android:textSize="25dp"
             android:layout_margin="10dp"
             android:backgroundTint="@android:color/transparent"
@@ -78,7 +80,7 @@
                 android:id="@+id/tv_followers"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="20000"
+                android:text="0"
                 android:textSize="20dp"
                 android:textStyle="bold"
                 android:background="@android:color/transparent"
@@ -98,7 +100,7 @@
                 android:id="@+id/tv_following"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="20000"
+                android:text="0"
                 android:textSize="20dp"
                 android:background="@android:color/transparent"
                 android:textStyle="bold"
@@ -129,5 +131,17 @@
         android:backgroundTint="#2DBEFF"
         android:layout_marginBottom="40dp"
         android:layout_marginEnd="20dp"/>
+
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/progressBar"
+        android:background="@drawable/shape_oval_story"
+        android:backgroundTint="@color/white"
+        android:indeterminateTint="#0090FF"
+        android:layout_centerInParent="true"
+        android:padding="10dp"
+        android:visibility="gone"
+        />
 
 </RelativeLayout>
