--- a/app_mxh_manga/app/src/main/res/layout/item_image_post.xml
+++ b/app_mxh_manga/app/src/main/res/layout/item_image_post.xml
@@ -19,13 +19,13 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:cardElevation="0dp"
-            app:cardBackgroundColor="@android:color/transparent"
+            app:cardBackgroundColor="@color/light_gray"
             app:cardCornerRadius="10dp">
             <ImageView
                 android:id="@+id/imageView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:src="@drawable/ic_launcher_background"
+                android:src="@drawable/ic_baseline_restart_alt_40"
                 android:background="@android:color/transparent"
                 android:scaleType="centerCrop"
                 android:adjustViewBounds="true"/>
