--- a/app_mxh_manga/app/src/main/res/layout/item_iv_chapter.xml
+++ b/app_mxh_manga/app/src/main/res/layout/item_iv_chapter.xml
@@ -1,15 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:backgroundTint="@color/light_gray">
     <ImageView
         android:id="@+id/iv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/img_1"
+
         android:scaleType="centerCrop"
         android:adjustViewBounds="true"
+        android:background="@android:color/transparent"
+        />
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/progressBar"
+        android:background="@android:color/transparent"
+        android:indeterminateTint="#0090FF"
+        android:layout_centerInParent="true"
+        android:padding="10dp"
         />
 
-</LinearLayout>
+</RelativeLayout>
