--- a/app_mxh_manga/app/src/main/res/layout/item_listview_image.xml
+++ b/app_mxh_manga/app/src/main/res/layout/item_listview_image.xml
@@ -9,13 +9,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardElevation="0dp"
-        app:cardBackgroundColor="@android:color/transparent"
+        app:cardBackgroundColor="@color/light_gray"
         app:cardCornerRadius="30dp">
         <ImageView
             android:id="@+id/imgPost"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_launcher_background"
+            android:src="@drawable/ic_baseline_restart_alt_40"
             android:background="@android:color/transparent"
             android:scaleType="centerCrop"
             android:adjustViewBounds="true"
