--- a/app_mxh_manga/app/src/main/res/layout/item_post.xml
+++ b/app_mxh_manga/app/src/main/res/layout/item_post.xml
@@ -19,13 +19,15 @@
             android:layout_alignParentStart="true"
             app:cardElevation="0dp"
             app:cardCornerRadius="30dp"
+            app:cardBackgroundColor="#2D070707"
             android:layout_centerVertical="true">
             <ImageView
                 android:id="@+id/imgView_avt"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
-                android:src="@drawable/ic_launcher_background"
+                android:background="@android:color/transparent"
+                android:src="@drawable/ic_baseline_person_40"
                 />
         </androidx.cardview.widget.CardView>
 
@@ -48,7 +50,17 @@
             android:layout_centerVertical="true"
             android:src="@drawable/ic_baseline_close_40"
             android:background="@android:color/transparent"
-
+            android:visibility="gone"
+            />
+        <ImageView
+            android:id="@+id/image_setting"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:src="@drawable/ic_baseline_more_horiz_40"
+            android:background="@android:color/transparent"
+            android:visibility="gone"
             />
     </RelativeLayout>
     <TextView
