--- a/app_mxh_manga/app/src/main/res/values/themes.xml
+++ b/app_mxh_manga/app/src/main/res/values/themes.xml
@@ -14,4 +14,14 @@
         <item name="android:background">@android:color/transparent</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
+    <style name="Them_datePickerDialog" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="android:background">#212121</item>
+        <item name="colorAccent">@color/black_50</item>
+        <item name="android:datePickerMode">spinner</item>
+        <item name="android:textColorPrimary">@color/white</item>
+        <item name="android:textColorSecondary">@color/white</item>
+        <item name="android:textColor">@color/white</item>
+
+
+    </style>
 </resources>
