--- a/app_mxh_manga/app/src/main/res/layout/activity_show_story.xml
+++ b/app_mxh_manga/app/src/main/res/layout/activity_show_story.xml
@@ -222,6 +222,7 @@
                 style="@style/Theme_textView"
                 android:text="Miêu tả"
                 android:padding="10dp"
+                android:ellipsize="end"
                 />
             <Button
                 android:id="@+id/btn_continue"
