--- a/app_mxh_manga/app/src/main/res/layout/item_genre_2.xml
+++ b/app_mxh_manga/app/src/main/res/layout/item_genre_2.xml
@@ -13,5 +13,6 @@
         android:background="@drawable/shape_genre_on"
         android:padding="10dp"
         android:textColor="#6D6D6D"
+        android:ellipsize="end"
         android:textStyle="bold"/>
 </FrameLayout>
