--- a/app_mxh_manga/app/src/main/res/layout/item_story_compose.xml
+++ b/app_mxh_manga/app/src/main/res/layout/item_story_compose.xml
@@ -42,6 +42,7 @@
         android:maxLines="2"
         android:text=""
         style="@style/Theme_textView"
+        android:ellipsize="end"
         android:textStyle="bold" />
 
     <TextView
@@ -56,6 +57,7 @@
         android:text=""
         android:textColor="#FF9800"
         android:maxLines="1"
+        android:ellipsize="end"
         style="@style/Theme_textView"/>
     <LinearLayout
         android:layout_width="match_parent"
@@ -81,6 +83,7 @@
                 android:textStyle="bold"
                 android:background="@android:color/transparent"
                 android:maxLines="1"
+                android:ellipsize="end"
                 />
             <TextView
                 android:layout_width="wrap_content"
@@ -90,6 +93,7 @@
                 android:textColor="@color/black_50"
                 android:background="@android:color/transparent"
                 android:maxLines="1"
+                android:ellipsize="end"
                 />
 
         </LinearLayout>
@@ -112,6 +116,7 @@
                 android:text="0"
                 android:textSize="12sp"
                 android:textStyle="bold"
+                android:ellipsize="end"
                 android:background="@android:color/transparent"
                 android:maxLines="1"
                 />
@@ -121,6 +126,7 @@
                 android:text="Lượt đọc"
                 android:textSize="12sp"
                 android:textColor="@color/black_50"
+                android:ellipsize="end"
                 android:background="@android:color/transparent"
                 android:maxLines="1"
                 />
@@ -146,6 +152,7 @@
                 android:textSize="12sp"
                 android:textStyle="bold"
                 android:background="@android:color/transparent"
+                android:ellipsize="end"
                 android:maxLines="1"
                 />
             <TextView
@@ -155,6 +162,7 @@
                 android:textSize="12sp"
                 android:textColor="@color/black_50"
                 android:background="@android:color/transparent"
+                android:ellipsize="end"
                 android:maxLines="1"
                 />
 
@@ -179,6 +187,7 @@
                 android:textSize="12sp"
                 android:textStyle="bold"
                 android:background="@android:color/transparent"
+                android:ellipsize="end"
                 android:maxLines="1"
                 />
             <TextView
@@ -188,6 +197,7 @@
                 android:textSize="12sp"
                 android:textColor="@color/black_50"
                 android:background="@android:color/transparent"
+                android:ellipsize="end"
                 android:maxLines="1"
                 />
 
