--- a/app_mxh_manga/app/src/main/res/layout/item_textview.xml
+++ b/app_mxh_manga/app/src/main/res/layout/item_textview.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         android:text="àuhiwufaw"
         style="@style/Theme_textView"
-
+        android:ellipsize="end"
         />
 
 </LinearLayout>
