--- a/app_mxh_manga/app/src/main/res/layout/item_textview_2.xml
+++ b/app_mxh_manga/app/src/main/res/layout/item_textview_2.xml
@@ -11,6 +11,7 @@
         android:textSize="17sp"
         android:text=""
         android:background="@android:color/transparent"
+        android:ellipsize="end"
         />
 
 </LinearLayout>
