--- a/app_mxh_manga/app/src/main/res/layout/activity_login.xml
+++ b/app_mxh_manga/app/src/main/res/layout/activity_login.xml
@@ -114,7 +114,7 @@
             android:layout_gravity="end"
             android:textSize="15dp"
             android:paddingHorizontal="10dp"
-            android:background="@drawable/btn_like_cmt"
+            android:background="@drawable/btn_text"
             android:textAllCaps="false"
             android:layout_marginEnd="20dp"
             />
