--- a/app_mxh_manga/app/src/main/res/layout/activity_search.xml
+++ b/app_mxh_manga/app/src/main/res/layout/activity_search.xml
@@ -26,7 +26,7 @@
         android:textStyle="bold"
         android:textAllCaps="false"
         android:layout_alignParentEnd="true"
-        android:background="@drawable/btn_like_cmt"
+        android:background="@drawable/btn_text"
         android:layout_alignParentTop="true"
         android:gravity="center"
         android:layout_marginEnd="10dp"
