--- a/app_mxh_manga/app/src/main/res/layout/fragment_profile.xml
+++ b/app_mxh_manga/app/src/main/res/layout/fragment_profile.xml
@@ -54,23 +54,27 @@
             android:backgroundTint="@android:color/transparent"
             android:maxLines="1"
             android:layout_gravity="center_vertical"/>
-        <TextView
-            android:id="@+id/tv_level"
+        <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="lv 0"
-            android:textSize="18sp"
-            android:background="@drawable/border"
-            android:layout_margin="10dp"
-            android:textStyle="bold|italic"
-            android:textAllCaps="true"
-            android:textColor="@color/white"
-            android:maxLength="10"
-            android:backgroundTint="#03A9F4"
-            android:gravity="center"
-            android:paddingVertical="5dp"
-            android:paddingHorizontal="15dp"
-            />
+            app:cardCornerRadius="10dp">
+            <TextView
+                android:id="@+id/tv_level"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="lv 0"
+                android:textSize="18sp"
+                android:background="@color/darker_gray"
+                android:textStyle="bold|italic"
+                android:textAllCaps="true"
+                android:textColor="@color/white"
+                android:maxLength="10"
+                android:gravity="center"
+                android:paddingVertical="5dp"
+                android:paddingHorizontal="15dp"
+                />
+        </androidx.cardview.widget.CardView>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
