--- a/app_mxh_manga/app/src/main/res/layout/fragment_rv.xml
+++ b/app_mxh_manga/app/src/main/res/layout/fragment_rv.xml
@@ -1,26 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="vertical"
     android:padding="10dp">
+    <TextView
+        android:id="@+id/tv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="25sp"
+        android:visibility="gone"
+        />
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_alignParentTop="true"
         android:layout_height="wrap_content"/>
-    <TextView
-        android:id="@+id/tv_noPost"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/recyclerView"
-        android:text="Hiện chưa có bài viết nào"
-        android:textSize="30dp"
-        android:gravity="center"
-        android:layout_centerInParent="true"
-        android:visibility="gone"
-        />
-
-
-
-</RelativeLayout>
+</LinearLayout>
