--- a/app_mxh_manga/app/src/main/res/layout/item_author_search.xml
+++ b/app_mxh_manga/app/src/main/res/layout/item_author_search.xml
@@ -43,6 +43,7 @@
         android:text=""
         android:textSize="16sp"
         android:background="@android:color/transparent"
+        android:ellipsize="end"
         android:textStyle="bold"
         android:layout_marginTop="15dp"
         android:maxLines="1"
@@ -58,6 +59,7 @@
         android:textStyle="normal"
         android:layout_marginBottom="15dp"
         android:background="@android:color/transparent"
+        android:ellipsize="end"
         android:maxLines="1"
         android:layout_alignParentBottom="true"
         />
