--- a/app_mxh_manga/app/src/main/res/layout/item_chapter.xml
+++ b/app_mxh_manga/app/src/main/res/layout/item_chapter.xml
@@ -15,6 +15,7 @@
         style="@style/Theme_textView"
         android:maxLines="1"
         android:padding="5dp"
+        android:ellipsize="end"
         android:background="@android:color/transparent"
         />
     <LinearLayout
@@ -30,6 +31,7 @@
             android:maxLines="1"
             android:padding="5dp"
             android:maxLength="15"
+            android:ellipsize="end"
             android:background="@android:color/transparent"
             android:layout_gravity="center_vertical"
             />
@@ -48,6 +50,7 @@
             android:text="0"
             android:textSize="13sp"
             android:maxLines="1"
+            android:ellipsize="end"
             android:padding="5dp"
             android:maxLength="10"
             android:background="@android:color/transparent"
@@ -66,6 +69,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="0"
+            android:ellipsize="end"
             android:textSize="13sp"
             android:maxLines="1"
             android:padding="5dp"
@@ -86,6 +90,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="0"
+            android:ellipsize="end"
             android:textSize="13sp"
             android:maxLines="1"
             android:padding="5dp"
