--- a/app_mxh_manga/app/src/main/res/layout/item_comment.xml
+++ b/app_mxh_manga/app/src/main/res/layout/item_comment.xml
@@ -79,7 +79,7 @@
                 android:layout_height="20dp"
                 android:text="Thích"
                 android:textSize="12sp"
-                android:background="@drawable/btn_like_cmt"
+                android:background="@drawable/btn_text"
                 android:textAllCaps="false"
                 android:textColor="#CD3F3F3F"
                 />
@@ -89,7 +89,7 @@
                 android:layout_height="20dp"
                 android:text="Phản hồi"
                 android:textSize="12sp"
-                android:background="@drawable/btn_like_cmt"
+                android:background="@drawable/btn_text"
                 android:textAllCaps="false"
                 android:textColor="#CD3F3F3F"
                 />
@@ -104,6 +104,7 @@
                 android:gravity="end|center_vertical"
                 app:drawableEndCompat="@drawable/ic_baseline_thumb_up_24"
                 android:visibility="gone"
+                android:ellipsize="end"
                 />
 
         </LinearLayout>
@@ -113,7 +114,7 @@
             android:layout_height="20dp"
             android:text="Xem 1 phản hồi khác..."
             android:textSize="12sp"
-            android:background="@drawable/btn_like_cmt"
+            android:background="@drawable/btn_text"
             android:textAllCaps="false"
             android:visibility="gone"
             />
