--- a/app_mxh_manga/app/src/main/res/layout/item_post.xml
+++ b/app_mxh_manga/app/src/main/res/layout/item_post.xml
@@ -41,6 +41,7 @@
             style="@style/Theme_textView"
             android:textStyle="bold"
             android:textSize="18sp"
+            android:ellipsize="end"
             android:gravity="center"
             android:layout_marginHorizontal="10dp"/>
         <ImageView
@@ -104,6 +105,7 @@
             android:layout_centerVertical="true"
             android:layout_toStartOf="@id/imgView_favourite"
             android:background="@android:color/transparent"
+            android:ellipsize="end"
             />
         <ImageView
             android:id="@+id/imgView_favourite"
@@ -126,6 +128,7 @@
             android:layout_centerVertical="true"
             android:layout_marginEnd="10dp"
             android:background="@android:color/transparent"
+            android:ellipsize="end"
             />
         <ImageView
             android:id="@+id/imgView_comment"
@@ -146,6 +149,7 @@
             android:text=""
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
+            android:ellipsize="end"
             android:layout_marginEnd="10dp"
             android:background="@android:color/transparent"
             />
