--- a/app_mxh_manga/app/src/main/res/layout/item_story.xml
+++ b/app_mxh_manga/app/src/main/res/layout/item_story.xml
@@ -38,6 +38,7 @@
         android:layout_alignParentTop="true"
         android:layout_toEndOf="@id/frameLayout"
         android:text=""
+        android:ellipsize="end"
         android:textStyle="bold"
         android:background="@android:color/transparent"
         android:textSize="15sp"
@@ -66,6 +67,7 @@
         android:textStyle="normal"
         android:background="@android:color/transparent"
         android:textSize="15sp"
+        android:ellipsize="end"
         android:layout_marginHorizontal="10dp"
         android:maxLines="2"
         />
@@ -83,6 +85,7 @@
         android:maxWidth="70dp"
         android:maxLines="1"
         android:gravity="center_vertical"
+        android:ellipsize="end"
         android:textColor="@color/black_50"
         />
 
@@ -107,6 +110,7 @@
         android:maxLines="1"
         android:layout_toStartOf="@+id/img_like"
         android:layout_marginEnd="10dp"
+        android:ellipsize="end"
         android:textColor="@color/black_50"
         android:gravity="center_vertical"/>
     <ImageView
@@ -127,6 +131,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginStart="10dp"
         android:background="@android:color/transparent"
+        android:ellipsize="end"
         android:maxWidth="70dp"
         android:maxLines="1"
         android:gravity="center_vertical"
@@ -149,6 +154,7 @@
         android:text=""
         android:textSize="12sp"
         android:layout_alignParentBottom="true"
+        android:ellipsize="end"
         android:layout_marginStart="10dp"
         android:background="@android:color/transparent"
         android:maxWidth="70dp"
