--- a/app_mxh_manga/app/src/main/res/layout/item_story_download.xml
+++ b/app_mxh_manga/app/src/main/res/layout/item_story_download.xml
@@ -53,6 +53,7 @@
         android:maxLines="1"
         android:gravity="center_vertical"
         android:layout_toStartOf="@+id/iv_close"
+        android:ellipsize="end"
         />
     <TextView
         android:id="@+id/tv_countChapter"
@@ -64,6 +65,7 @@
         android:text=""
         android:textSize="20dp"
         android:background="@android:color/transparent"
+        android:ellipsize="end"
         />
 
 </RelativeLayout>
