--- a/app_mxh_manga/app/src/main/res/layout/layout_bottom_sheet_comment.xml
+++ b/app_mxh_manga/app/src/main/res/layout/layout_bottom_sheet_comment.xml
@@ -57,7 +57,7 @@
             android:layout_height="40dp"
             android:layout_alignBottom="@+id/edt_cmt"
             android:layout_alignParentEnd="true"
-            android:background="@drawable/btn_like_cmt"
+            android:background="@drawable/btn_text"
             android:padding="10dp"
             android:src="@drawable/ic_baseline_send_24"
             android:contentDescription="TODO" />
