--- a/app_mxh_manga/app/src/main/res/layout/layout_item_show_story.xml
+++ b/app_mxh_manga/app/src/main/res/layout/layout_item_show_story.xml
@@ -2,44 +2,41 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:maxHeight="700dp">
+    android:layout_marginVertical="10dp"
+    >
+
     <TextView
         android:id="@+id/tv_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_toStartOf="@+id/tv_showAll"
-        android:maxLines="1"
+        android:layout_toStartOf="@+id/btn_showAll"
+        android:maxLines="2"
         android:text=""
-        style="@style/Theme_textView"
-        android:textSize="20sp"
+        android:textSize="18sp"
+        android:padding="10dp"
+        android:ellipsize="end"
         android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/tv_showAll"
+    <Button
+        android:id="@+id/btn_showAll"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/tabLayout"
+        android:layout_above="@+id/recyclerView"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:gravity="center_vertical"
-        android:text="Thêm"
-        android:layout_marginEnd="10dp"
+        android:paddingHorizontal="10dp"
+        android:text="Xem thêm"
+        android:textAllCaps="false"
+        android:textStyle="bold"
+        android:background="@drawable/btn_text"
         android:textSize="18sp" />
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tabLayout"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_below="@id/tv_title"
         android:layout_height="wrap_content"
-        app:tabSelectedTextColor="#03A9F4"
-        app:tabRippleColor="@android:color/transparent"
-        />
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/viewPage2"
-        android:layout_width="match_parent"
-        android:layout_height="450dp"
-        android:layout_below="@id/tabLayout"
+        android:layout_below="@id/tv_title"
         android:layout_marginTop="10dp"/>
 </RelativeLayout>
