--- a/app_mxh_manga/app/src/main/res/layout/activity_creative_zone.xml
+++ b/app_mxh_manga/app/src/main/res/layout/activity_creative_zone.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#5ED0D0D0"
+    style="@style/Theme_layout"
     tools:context=".homePage.component.story.Activity_creative_zone">
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
