--- a/app_mxh_manga/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app_mxh_manga/app/src/main/res/layout/activity_edit_profile.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
+    style="@style/Theme_layout"
     tools:context=".homePage.component.profile.component.Activity_EditProfile">
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
