--- a/app_mxh_manga/app/src/main/res/layout/activity_login.xml
+++ b/app_mxh_manga/app/src/main/res/layout/activity_login.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    style="@style/Theme_layout"
     tools:context=".login.Activity_Login">
     <LinearLayout
         android:layout_width="match_parent"
