--- a/app_mxh_manga/app/src/main/res/layout/activity_new_chapter.xml
+++ b/app_mxh_manga/app/src/main/res/layout/activity_new_chapter.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    style="@style/Theme_layout"
     tools:context=".homePage.component.story.Activity_newChapter">
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
