--- a/app_mxh_manga/app/src/main/res/layout/activity_signup.xml
+++ b/app_mxh_manga/app/src/main/res/layout/activity_signup.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    style="@style/Theme_layout"
+    android:background="@color/light_gray"
     tools:context=".login.component.Activity_signup">
     <RelativeLayout
         android:layout_width="match_parent"
