--- a/app_mxh_manga/app/src/main/res/layout/fragment_rv.xml
+++ b/app_mxh_manga/app/src/main/res/layout/fragment_rv.xml
@@ -4,12 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    style="@style/Theme_layout"
     android:padding="10dp">
     <TextView
         android:id="@+id/tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="25sp"
+        android:padding="10dp"
         android:visibility="gone"
         />
     <androidx.recyclerview.widget.RecyclerView
