--- a/app_mxh_manga/app/src/main/res/layout/fragment_tablayout_vp2.xml
+++ b/app_mxh_manga/app/src/main/res/layout/fragment_tablayout_vp2.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    style="@style/Theme_layout"
     tools:context=".homePage.component.bookcase.component.Fragment_history">
 
     <com.google.android.material.tabs.TabLayout
