--- a/app_mxh_manga/app/src/main/res/layout/item_author_search.xml
+++ b/app_mxh_manga/app/src/main/res/layout/item_author_search.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="100dp"
     android:layout_marginVertical="10dp"
-    android:background="@color/white"
+    style="@style/Theme_layout_item"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <LinearLayout
         android:id="@+id/cardView"
