--- a/app_mxh_manga/app/src/main/res/layout/item_bs_listview.xml
+++ b/app_mxh_manga/app/src/main/res/layout/item_bs_listview.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@android:color/transparent">
+    android:layout_height="wrap_content">
     <ImageView
         android:id="@+id/iv_icon"
         android:layout_width="50dp"
