--- a/app_mxh_manga/app/src/main/res/layout/item_chapter.xml
+++ b/app_mxh_manga/app/src/main/res/layout/item_chapter.xml
@@ -3,21 +3,37 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:background="@color/white"
     android:padding="5dp">
-    <TextView
-        android:id="@+id/tv_title"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text=""
-        android:textStyle="bold"
-        android:textAllCaps="true"
-        style="@style/Theme_textView"
-        android:maxLines="1"
-        android:padding="5dp"
-        android:ellipsize="end"
-        android:background="@android:color/transparent"
-        />
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textStyle="bold"
+            android:textAllCaps="true"
+            style="@style/Theme_textView"
+            android:maxLines="1"
+            android:layout_alignParentStart="true"
+            android:padding="5dp"
+            android:ellipsize="end"
+            android:layout_toStartOf="@+id/btn_delete"
+            android:background="@android:color/transparent"
+            />
+        <Button
+            android:id="@+id/btn_delete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:text="Xóa"
+            android:textAllCaps="false"
+            android:background="@drawable/btn_text"
+            android:visibility="gone"
+            />
+    </RelativeLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
