--- a/app_mxh_manga/app/src/main/res/layout/item_comment.xml
+++ b/app_mxh_manga/app/src/main/res/layout/item_comment.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="10dp"
-    android:background="@color/white"
+    android:background="@android:color/transparent"
     xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.cardview.widget.CardView
