--- a/app_mxh_manga/app/src/main/res/layout/item_genre.xml
+++ b/app_mxh_manga/app/src/main/res/layout/item_genre.xml
@@ -1,20 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="30dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginHorizontal="5dp"
-    app:cardElevation="0dp"
-    app:cardBackgroundColor="@color/light_gray"
-    app:cardCornerRadius="8dp">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <TextView
         android:id="@+id/tv_genre"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingHorizontal="5dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="5dp"
         android:gravity="center"
-        android:textColor="@color/black_50"
         style="@style/Theme_textView"
+        android:ellipsize="end"
         />
 
-</androidx.cardview.widget.CardView>
+</FrameLayout>
