--- a/app_mxh_manga/app/src/main/res/layout/item_post.xml
+++ b/app_mxh_manga/app/src/main/res/layout/item_post.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white"
+    android:background="@android:color/transparent"
     android:paddingVertical="10dp">
 
     <RelativeLayout
