--- a/app_mxh_manga/app/src/main/res/layout/item_story.xml
+++ b/app_mxh_manga/app/src/main/res/layout/item_story.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="200dp"
     android:padding="10dp"
+    android:background="@android:color/transparent"
     android:layout_marginVertical="10dp">
     <FrameLayout
         android:id="@+id/frameLayout"
