--- a/app_mxh_manga/app/src/main/res/values/themes.xml
+++ b/app_mxh_manga/app/src/main/res/values/themes.xml
@@ -3,7 +3,6 @@
     <style name="Theme.App_mxh_manga" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="android:statusBarColor">@color/green</item>
         <item name="android:textColor">#000000</item>
-
     </style>
     <style name="Theme_transparent" parent="Theme.App_mxh_manga">
         <item name="android:background">@android:color/transparent</item>
@@ -26,7 +25,7 @@
     </style>
     <style name="Theme_EditText" parent="Theme.App_mxh_manga">
         <item name="android:textSize">17sp</item>
-        <item name="backgroundTint">#17DDDDDD</item>
+        <item name="backgroundTint">#5B9A9A9A</item>
         <item name="android:textColor">#313131</item>
         <item name="android:padding">10dp</item>
     </style>
@@ -35,6 +34,15 @@
         <item name="android:backgroundTint">@color/white</item>
         <item name="android:background">@color/white</item>
         <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="Theme_layout" parent="Theme.App_mxh_manga">
+        <item name="android:backgroundTint">@color/white</item>
+        <item name="android:background">@color/white</item>
+    </style>
+    <style name="Theme_layout_item" parent="Theme.App_mxh_manga">
+        <item name="android:backgroundTint">@color/light_gray</item>
+        <item name="android:background">@color/light_gray</item>
     </style>
 
 </resources>
