--- a/app_mxh_manga/app/src/main/res/layout/activity_signup.xml
+++ b/app_mxh_manga/app/src/main/res/layout/activity_signup.xml
@@ -64,6 +64,7 @@
                     android:textSize="18sp"
                     android:backgroundTint="@android:color/transparent"
                     android:inputType="textPassword"
+                    android:maxLength="10"
                     />
             </com.google.android.material.textfield.TextInputLayout>
             <com.google.android.material.textfield.TextInputLayout
