--- a/app_mxh_manga/app/src/main/res/layout/activity_profile.xml
+++ b/app_mxh_manga/app/src/main/res/layout/activity_profile.xml
@@ -68,7 +68,7 @@
                     android:background="@drawable/border_follow"
                     android:layout_alignParentEnd="true"
                     android:layout_below="@id/iv_cover"
-                    android:textSize="18sp"
+                    android:textSize="15sp"
                     android:gravity="center"
                     android:paddingVertical="10dp"
                     android:paddingHorizontal="20dp"
@@ -78,6 +78,25 @@
                     android:textAllCaps="false"
                     android:visibility="visible"
                     />
+                <Button
+                    android:id="@+id/btn_messenger"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Nhắn tin"
+                    android:background="@drawable/selector_btn_rg30"
+                    android:layout_alignParentEnd="true"
+                    android:layout_below="@id/btn_follow"
+                    android:textSize="15sp"
+                    android:gravity="center"
+                    android:paddingVertical="10dp"
+                    android:paddingHorizontal="20dp"
+                    android:layout_marginTop="20dp"
+                    android:textStyle="bold"
+                    android:layout_marginEnd="10dp"
+                    android:textAllCaps="false"
+                    android:visibility="gone"
+                    />
+
                 <TextView
                     android:id="@+id/tv_name"
                     android:layout_width="wrap_content"
@@ -90,6 +109,7 @@
                     android:layout_alignParentStart="true"
                     android:layout_marginHorizontal="20dp"
                     android:layout_marginBottom="10dp"
+                    android:layout_toStartOf="@+id/btn_messenger"
                     />
                 <TextView
                     android:id="@+id/tv_desc"
