--- a/app_mxh_manga/app/src/main/res/layout/item_chat.xml
+++ b/app_mxh_manga/app/src/main/res/layout/item_chat.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="5dp"
     android:orientation="horizontal">
     <androidx.cardview.widget.CardView
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         app:cardCornerRadius="50dp"
         app:cardBackgroundColor="@color/light_gray"
         android:layout_centerVertical="true"
@@ -23,7 +23,7 @@
     </androidx.cardview.widget.CardView>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:paddingStart="10dp"
         android:orientation="vertical" >
         <TextView
